--- a/sftp-config.json
+++ b/sftp-config.json
@@ -3,7 +3,7 @@
     // Visit http://wbond.net/sublime_packages/sftp/settings for help
     
     // sftp, ftp or ftps
-    "type": "sftp",
+    "type": "ftp",
 
     "save_before_upload": true,
     "upload_on_save": false,
@@ -17,7 +17,7 @@
     "host": "183.57.43.253",
     "user": "simon",
     "password": "xsq@519",
-    //"port": "22",
+    "port": "22",
     
     "remote_path": "/home/simon/uboss",
     "ignore_regexes": [
